<resources>
    <string name="app_name">Preparations for the mosque began in 1989, and the installation of foundation piles began in 1992. Construction was delayed between 1993 and 1994 owing to a lack of funds.The mosque was officially opened on 2 February 2000 following a proclamation of the city status of Kota Kinabalu.Construction of the mosque cost 34 million Malaysian ringgits. The architectural design is based on the Nabawi Mosque, the second holiest site in Islam, in Medina, Saudi Arabia.The dome is blue and gold, inspired by similar Arabic architecture.</string>
    <string name="place1">Kota Kinabalu City Mosque</string>
    <string name="kinabalu">The Mount Kinabalu</string>
    <string name="kinabalu2">Kinabalu National Park was established in 1964, conserving 754 square kilometers (291 square miles) of mountain and surrounding forest for future generations to enjoy. Kinabalu National Park was Malaysia first designated park and the first UNESCO World Heritage Site in both Borneo and Malaysia. Designated for its outstanding universal values and as one of the world most important biological places, with over 6,000 species of flora and wildlife. It is simple to see why this mountain has been revered since humans first arrived on the island of Borneo. Sitting at an incredible height of 4095.2 meters (13,435 feet) above sea level,  Mount Kinabalu has the honor of being the tallest mountain between the Himalayas and Papua New Guinea.</string>
    <string name="kinabalugeo">Geology</string>
    <string name="geology2">Mount Kinabalu is mainly a large pluton composed of granodiorite that is intrusive into sedimentary and ultrabasic rocks and comprises the central component, or core, of the Kinabalu massif. Granodiorite is found in severely folded strata, most likely dating from the Eocene to the Miocene, as well as ultrabasic and basic igneous rocks. Millions of years ago, molten rock was forced up from the Earth crust. In geological terms, the mountain is very young, as the granodiorite cooled and cemented only around 10 million years ago.</string>
    <string name="geology3">The current landform is thought to be a mid-Pliocene peneplain, arched and heavily divided, through which the Kinabalu granodiorite body rose in isostatic adjustment. It is still increasing at a rate of 5 mm (0.20 in) every year. During the Pleistocene Epoch, around 100,000 years ago, the gigantic mountain was covered by massive sheets of ice and glaciers that poured down its slopes, scouring its surface and producing the 1,800 m (5,906 ft) deep Lows Gully (named after Hugh Low) on its north face. Its jagged rocky peaks reveal its granitic composition and glacial formative processes.</string>
    <string name="parks">Semenggoh Wildlife Conservation Centre</string>
    <string name="parks2">Just 20 kilometers south of Kuching, there is a natural habitat which acts as a home to Orangutans. The Semenggoh Wildlife Centre of Semenggoh Nature Reserve is by far the biggest Orangutan Rehabilitation Centre in Sarawak. Back in 1975, it was established as a sanctuary for Orangutans who are injured, orphaned or being kept captive as illegal pets. Currently, the centre serves as a habitat for the Orangutans and also a place for visitors to learn about the endangered rare species. This wildlife centre has a thriving population of healthy adolescent and young adult semi-wild Orangutans. They spend most of their time roaming the forest but are trained to get back to the centre during feeding times where they will be able to get a free meal from the caretakers. Though they have been trained to get back to the centre during feeding time, they may not appear to get a free meal during the forest fruiting season.
        Besides orangutans, Semenggoh Nature Reserve is also a habitat for rare flora and fauna including the giant squirrel, pigmy squirrel, gibbons and splendid variety of birds. The howling of gibbons, the chirping of birds and the chattering of Orangutans make the nature reserve an ideal place for nature lovers.
        Sarawak Government established Sarawak Forestry to position Sarawak at the forefront of sustainable forest management and conservation. Since 2003, Semenggoh Nature Reserve had been administrated and cared for by SARAWAK FORESTRY. </string>
    <string name="parks3">In the early days, Semenggoh was the site for shifting cultivation by the Dayak and the Javanese planting of rubber (Hevea brassiliansis), gambier, tea and herbs. In 1920, this shifting cultivation area was gazetted as Forest Reserve, the first ever Forest Reserve in Sarawak and used as a botanical research plot. The name Semenggoh Forest Reserve was derived from the Semenggoh River which runs through the Reserve to Sungai Kuap.
        Being the oldest nature reserve, Semenggoh plays important roles and functions in flora and fauna conservation. After the establishment of the research plot in the Reserve, a Forest Training School was built to train the Forestry’s staff on botany. At one point in time, the Brooke’s Pool in the Reserve played a major role in supplying gravity feed water to Leper Camp which is now renamed as Rajah Charles Brooke Memorial Hospital.
        After having existed for almost 80 years, Semenggoh Forest Reserve was declared as a Semenggoh Nature Reserve on 20th February 2000 vide Sarawak Gazette Notification No. 1497 Vol. LV dated 12 April, 2000 with a total area of 653 ha. The change of status from Forest Reserve to Nature Reserve was to ensure firm tenure-ship of the area. Semenggoh Nature Reserve is declared as a TPA to protect the habitat of the semi-wild orangutans in Semenggoh.
        Today, the Reserve is home to the SARAWAK FORESTRY’s Botanical Research Centre (BRC), Seed Bank and Nursery, Semenggoh Wildlife Centre (SWC) and Sarawak Biodiversity Centre (SBC). Located 20 km to the South of Kuching along the Borneo Heights Road, is an easily accessible top destination for nature lovers that has lots to offer.</string>
    <string name="tips1">1. Do your research</string>
    <string name="place1tips">Learn everything you can about your destination before you arrive. Read visitor reviews and ask locals about the safest neighborhoods, places to stay, and crime rates. Check the State Department website for country updates and register for the Smart Traveler Enrollment Program (STEP).
        Another key travel security precaution is knowing who to contact in an emergency. Obtain contact information for the nearest embassy or consulate, police station, and other local emergency services.</string>
    <string name="google_map_Api_Key">AIzaSyBGXVCu6OQP8oKuDb7k0SSDBoY-aWa8NYQ</string>
    <string name="map">Normal Map</string>
    <string name="Hybrid_map">Hybrid Map\n</string>
    <string name="satellite_map">Satellite Map\n</string>
    <string name="terrain_map">Terrain map\n</string>
    <string name="setting">setting</string>
    <string name="user_manual">FAQ\n</string>
    <string name="Tips2">2.Use a small backpack/suitcase.</string>
    <string name="tips2text">By purchasing a small backpack, you will be forced to pack light and avoid carrying too much stuff. Humans have a natural tendency to want to fill space. Even if you pack light initially but have lots of extra room in your bag, you’ll end up going “well, I guess I can take more” and fill that space. You’ll regret it later as you’ll be carrying around a bunch of stuff you don’t need as well as more weight on your shoulders. The same rule applies to suitcases. Don’t take a huge suitcase because they are a pain in the butt to lug around, especially if you’re traveling long termrecommend packing cubes, which are essential if you’re going to be living out of a backpack for a few weeks (or months), or you just want to keep your suitcase better organized. They come in a variety of sizes, allowing you to store items big and small. They’re great for making it easy to find everything in your backpack or suitcase.</string>
    <string name="Tips3">3. Plan your budget carefully</string>
    <string name="tipstext3">If you don’t intend to make any big purchases at the time, avoid carrying big notes especially when traveling in crowded places. You might think that dangerous places are the quiet and less-traveled ones. But crowded places have their dangers too.
        Also, make sure you already have local currency ready on hand when you arrive. There may be times when your cards might not work on some ATM machines. Speaking from my own experience, it can be super frustrating. </string>
    <string name="Tips4">4. Learn a new language</string>
    <string name="tipstext4">Before you travel, or even while you travel, you can pick a new language, preferably the language used in the country you’re visiting. It’ll make your journey better because you can reduce language barriers, communicate with the locals, prevent yourself from getting scammed, and feel more confident when walking in a “whole different world.”
        In many cases, travelers who put effort into learning a local language tend to get better treatment from the local community. And hey, don’t assume that everyone in the world speaks English!</string>
    <string name="Tips5">5.Earn while you travel</string>
    <string name="texttips5">Working holidays are a brilliant way to afford to spend several months of the year (or more) living the travel dream: Teach skiing on a winter season, take care of holidaymakers travelling to the Mediterranean in the summer, or earn by teaching a language in Thailand; you could even freelance while traveling if you’re able to work “on the go”. The opportunities are literally endless.</string>


</resources>