<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/custom_button4"
    tools:context=".MainActivity15">

    <ImageButton
        android:id="@+id/btnBack15"
        android:layout_width="71dp"
        android:layout_height="60dp"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.001"
        app:srcCompat="@drawable/back_button2" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="408dp"
        android:layout_height="159dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.106"
        app:srcCompat="@drawable/travel_tips" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="411dp"
        android:layout_height="45dp"
        android:fontFamily="@font/allerta_stencil"
        android:text="TRAVEL TIPS"
        android:textAlignment="center"
        android:textColor="#1B1919"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <ScrollView
        android:layout_width="414dp"
        android:layout_height="497dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/custom_button3"
        android:contentDescription="v"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView11"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/tips1"
                android:textAlignment="center"
                android:textColor="#131313"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imageView26"
                android:layout_width="match_parent"
                android:layout_height="148dp"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/reasearch_tips" />

            <TextView
                android:id="@+id/textView33"
                android:layout_width="match_parent"
                android:layout_height="152dp"
                android:background="@drawable/custom_button3"
                android:text="@string/place1tips"
                android:textColor="#201E1E" />

            <TextView
                android:id="@+id/textView34"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Tips2"
                android:textAlignment="center"
                android:textColor="#020202"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imageView27"
                android:layout_width="match_parent"
                android:layout_height="198dp"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/packing_tips" />

            <TextView
                android:id="@+id/textView35"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tips2text"
                android:textColor="#0C0C0C" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Tips3"
                android:textAlignment="center"
                android:textColor="#020202"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imageView28"
                android:layout_width="match_parent"
                android:layout_height="198dp"
                app:srcCompat="@drawable/budget_tips" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tipstext3"
                android:textColor="#0B0909" />

            <TextView
                android:id="@+id/textView40"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Tips4"
                android:textAlignment="center"
                android:textColor="#020202"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imageView29"
                android:layout_width="match_parent"
                android:layout_height="198dp"
                app:srcCompat="@drawable/language_tips" />

            <TextView
                android:id="@+id/textView41"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tipstext4"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/textView42"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Tips5"
                android:textAlignment="center"
                android:textColor="#020202"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imageView30"
                android:layout_width="match_parent"
                android:layout_height="198dp"
                app:srcCompat="@drawable/earn_tips" />

            <TextView
                android:id="@+id/textView43"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/texttips5"
                android:textColor="#1E1B1B" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>