<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/custom_button4"
    tools:context=".MainActivity11">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/alfa_slab_one"
                android:text="Background of Mount Kinabalu"
                android:textAlignment="center"
                android:textColor="#171616"
                android:textSize="34sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="match_parent"
                android:layout_height="197dp"
                app:srcCompat="@drawable/mount_kinabalu" />

            <TextView
                android:id="@+id/textView36"
                android:layout_width="match_parent"
                android:layout_height="217dp"
                android:background="#FFF6F6"
                android:text="@string/kinabalu2"
                android:textColor="#4E4A4A" />

            <TextView
                android:id="@+id/textView37"
                android:layout_width="match_parent"
                android:layout_height="49dp"
                android:background="#FFFAFA"
                android:text="@string/kinabalugeo"
                android:textAlignment="center"
                android:textColor="#070707"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView38"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:background="#FAFAFA"
                android:text="@string/geology2"
                android:textColor="#4E4A4A" />

            <TextView
                android:id="@+id/textView39"
                android:layout_width="match_parent"
                android:layout_height="189dp"
                android:background="#FBFAFA"
                android:text="@string/geology3"
                android:textColor="#777272" />

            <ImageButton
                android:id="@+id/btnBack9"
                android:layout_width="match_parent"
                android:layout_height="63dp"
                android:background="@drawable/custom_button4"
                android:contentDescription="back"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.001"
                app:srcCompat="@drawable/back_button2" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>